ff-app/src/App.css
:root {
  --primary-color: #DFFF00;
  --primary-font: 'lexend', sans-serif;
  --primary-bg-color: #000000;
  --selection-black: #393939;
  --main-gray: #ADAAAA;
}
.App {
  width: 100vw;
  height: 100vh;
  text-align: center;
}
.PageTitle {
  font-size: 2rem;
  margin-bottom: 1rem;
  color: var(--primary-color);
  position: relative;
  right: 0px;
}

.profile {
  position: fixed;
  bottom: 40px;
  right: 20px;
  color: var(--primary-color);
  top: 20px;
  width: 50px;
  height: 50px;
}

.profile:active{
  /*turns blue on click*/
  color:#61dafb
}

body{
  margin: 0;
  padding: 0%;
  background-color: var(--primary-bg-color);
  
}

.Sidebar {
  position: fixed;
  top: 0;
  left: 0;
  width: 200px;
  height: 100%;
  font-family: var(--primary-font);
  background-color: var(--primary-bg-color);
  /*outline: var(--primary-color) solid 1px;
  this gets ride of a green outline on the left sidebar might want latter*/
}

.SidebarTitle {
  color: var(--primary-color);
  /*font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  */
  padding-top: 2%;
  font-family: 'lexend', sans-serif;
  font-size: 1.5rem;
  text-align: right;
  /* Margin vs text-align IDK need to rearch later this is for the title */
  background-color: var(--primary-bg-color);
}

.SidebarHeader{
  align-items: left;
  font-family: 'lexend', sans-serif;
  color: var(--primary-color);
  width: 100%;
  padding: 0;
  background-color: var(--primary-bg-color);
  padding-top: 10%; /*this controls the dist from bottom of sub header*/
  padding-bottom: 10%;
}

/* This is the Archive section */
.SidebarHeader #title {
  color: var(--primary-color);
  font-size: 130%;
  font-family: 'lexend', sans-serif;
  padding: 0 20px;

}

/* This is the "Elite Performance" section */
.SidebarHeader #subtitle {
  color: gray;
  font-size: 0.8rem;
  align-items: left;
  padding: 0 20px;

}


.SidebarList {
  height: auto;
  width: 100%;
  padding: 5px;
  /*background-color: var(--main-gray);  */
}

.SidebarList .row {
width: 100%;
height: 40px;
background-color: var(--primary-bg-color);
border-start-end-radius: 1px solid var(--main-gray);
margin: 0%;

display: flex;
flex-direction: row;
color: var(--main-gray);
justify-content: center;
align-items: center;
font-family: var(--primary-font);
}

.Sidebar .row:hover{
  background-color: var(--selection-black);
  color: var(--primary-color);
  cursor: pointer;
  border-top-right-radius: 30px;
  border-bottom-right-radius: 30px;
  border-left-color: #DFFF00;
}

.Sidebar #active {
  place-items: center;
  font-family: var(--primary-font);
  background-color: var(--selection-black);
  color: var(--primary-color);
  border-left: 5px solid var(--primary-color);
  border-top-right-radius: 30px;
  border-bottom-right-radius: 30px;
}

.row #icon {
  flex: 30%;
  display: grid;
  place-items: center;
}

.row #title {
  flex: 70%;
  text-align: left;
  font-size: small;
}

.LogWBut {
  position: fixed;
  bottom: 40px;
  left: 20px;
  border-radius: 5px;
  border: none;
  background: linear-gradient(95deg, #F6FFC0, var(--primary-color), #DAF900);
  width: 25%;
  height: 40px;

  color: black;
  font-family: var(--primary-font);
  font-size: small;
}



.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: var(--primary-bg-color);
  position: sticky;
  top: 0;
  z-index: 1000;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: var(--primary-color);
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

